// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx-stories no-name.mdx 1`] = `
Object {
  "components": Object {
    "2855216c2faa4ab43ed978e3ff6743e4": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "name": "Button",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "2855216c2faa4ab43ed978e3ff6743e4",
    },
    "date": 2020-10-21T01:23:26.441Z,
    "dateModified": 2020-11-12T23:53:37.800Z,
    "mdxType": "Meta",
    "package": "3ae9354c82688a27372041e032d9a3d2",
    "title": "MDX",
  },
  "exports": Object {
    "default": Object {
      "story": Object {
        "title": undefined,
      },
    },
  },
  "packages": Object {
    "3ae9354c82688a27372041e032d9a3d2": Object {
      "dependencies": Object {
        "@babel/generator": "^7.12.5",
        "@babel/parser": "^7.12.5",
        "@babel/traverse": "^7.12.5",
        "@component-controls/core": "^1.41.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.12.6",
        "@component-controls/ts-markdown-docs": "^1.37.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "3ae9354c82688a27372041e032d9a3d2",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/no-name.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.41.1",
    },
  },
  "stories": Object {},
  "transformed": "import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"MDX\\" component={Button} />

<Story>
  <Button />
</Story>",
}
`;

exports[`mdx-stories props-argument.mdx 1`] = `
Object {
  "components": Object {
    "adb0a7ff2c278d595f4ce67bb4b42887": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "name": "Button",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "adb0a7ff2c278d595f4ce67bb4b42887",
    },
    "date": 2020-10-21T01:23:26.441Z,
    "dateModified": 2020-11-12T23:53:49.622Z,
    "mdxType": "Meta",
    "package": "2a402139de103fe4f924b61618619173",
    "title": "MDX",
  },
  "exports": Object {
    "default": Object {
      "story": Object {
        "title": undefined,
      },
    },
  },
  "packages": Object {
    "2a402139de103fe4f924b61618619173": Object {
      "dependencies": Object {
        "@babel/generator": "^7.12.5",
        "@babel/parser": "^7.12.5",
        "@babel/traverse": "^7.12.5",
        "@component-controls/core": "^1.41.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.12.6",
        "@component-controls/ts-markdown-docs": "^1.37.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "2a402139de103fe4f924b61618619173",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/props-argument.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.41.1",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "value": "props",
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 45,
          "line": 18,
        },
        "start": Object {
          "column": 9,
          "line": 18,
        },
      },
      "mdxType": "Story",
      "name": "story-with-props",
      "source": "props => <Button />",
    },
  },
  "transformed": "import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"MDX\\" component={Button} />

<Story name=\\"story-with-props\\">
  {props => <Button />}
</Story>
",
}
`;

exports[`mdx-stories story.mdx 1`] = `
Object {
  "components": Object {
    "ceea0565a65f75c8c7b6b355d6d335ac": Object {
      "from": "../../components/button-default-arrow-func",
      "importedName": "default",
      "imports": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "loc": Object {
        "end": Object {
          "column": 65,
          "line": 3,
        },
        "start": Object {
          "column": 15,
          "line": 3,
        },
      },
      "name": "Button",
      "package": "ceea0565a65f75c8c7b6b355d6d335ac",
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-arrow-func.js",
      "source": "import React from 'react';

const Button = props => <button>{\`Hello, \${props.name}\`}</button>;

export default Button;
",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "ceea0565a65f75c8c7b6b355d6d335ac",
    },
    "date": 2020-10-21T01:23:26.441Z,
    "dateModified": 2020-11-12T23:53:53.942Z,
    "mdxType": "Meta",
    "package": "a588f2668941163f0163aabd28f5304e",
    "title": "MDX",
  },
  "exports": Object {
    "default": Object {
      "story": Object {
        "title": undefined,
      },
    },
  },
  "packages": Object {
    "a588f2668941163f0163aabd28f5304e": Object {
      "dependencies": Object {
        "@babel/generator": "^7.12.5",
        "@babel/parser": "^7.12.5",
        "@babel/traverse": "^7.12.5",
        "@component-controls/core": "^1.41.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.12.6",
        "@component-controls/ts-markdown-docs": "^1.37.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "a588f2668941163f0163aabd28f5304e",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/story.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.41.1",
    },
    "ceea0565a65f75c8c7b6b355d6d335ac": Object {
      "dependencies": Object {
        "@babel/generator": "^7.12.5",
        "@babel/parser": "^7.12.5",
        "@babel/traverse": "^7.12.5",
        "@component-controls/core": "^1.41.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.12.6",
        "@component-controls/ts-markdown-docs": "^1.37.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "ceea0565a65f75c8c7b6b355d6d335ac",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-default-arrow-func.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.41.1",
    },
  },
  "stories": Object {
    "smartStory": Object {
      "id": "smartStory",
      "loc": Object {
        "end": Object {
          "column": 6,
          "line": 19,
        },
        "start": Object {
          "column": 48,
          "line": 17,
        },
      },
      "mdxType": "Story",
      "name": "smart story",
      "source": "<Button />",
    },
  },
  "transformed": "import { Story, Meta } from '@component-controls/blocks';
import Button from '../../components/button-default-arrow-func';


<Meta title=\\"MDX\\" component={Button} />

<Story name=\\"smart story\\">
  <Button />
</Story>
",
}
`;

exports[`mdx-stories three-levels-alias.mdx 1`] = `
Object {
  "components": Object {
    "c63d685efb0c65f18ffc63184e852ef4": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "name": "Button",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "c63d685efb0c65f18ffc63184e852ef4",
    },
    "date": 2020-10-21T01:23:26.441Z,
    "dateModified": 2020-11-12T23:54:01.166Z,
    "mdxType": "Meta",
    "package": "92ff07f5e66bce7d793d8a6b561a1e0d",
    "title": "MDX",
  },
  "exports": Object {
    "default": Object {
      "story": Object {
        "title": undefined,
      },
    },
  },
  "packages": Object {
    "92ff07f5e66bce7d793d8a6b561a1e0d": Object {
      "dependencies": Object {
        "@babel/generator": "^7.12.5",
        "@babel/parser": "^7.12.5",
        "@babel/traverse": "^7.12.5",
        "@component-controls/core": "^1.41.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.12.6",
        "@component-controls/ts-markdown-docs": "^1.37.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "92ff07f5e66bce7d793d8a6b561a1e0d",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/three-levels-alias.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.41.1",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 31,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 24,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 16,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 11,
                      "line": 0,
                    },
                  },
                  "name": "first",
                  "value": "first",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 22,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 18,
                      "line": 0,
                    },
                  },
                  "name": "last",
                  "value": "last",
                },
              ],
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 29,
                  "line": 0,
                },
                "start": Object {
                  "column": 26,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 72,
          "line": 18,
        },
        "start": Object {
          "column": 9,
          "line": 18,
        },
      },
      "mdxType": "Story",
      "name": "story-with-props",
      "source": "({ name: { first, last }, age }) => <Button />",
    },
  },
  "transformed": "import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"MDX\\" component={Button} />

<Story name=\\"story-with-props\\">
  {({ name: { first, last }, age }) => <Button />}
</Story>
",
}
`;

exports[`mdx-stories tw0-levels-sub-arguments.mdx 1`] = `
Object {
  "components": Object {
    "88c2f5883a4daf6051d3f8a38ce7bf75": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "name": "Button",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "88c2f5883a4daf6051d3f8a38ce7bf75",
    },
    "date": 2020-10-21T01:23:26.441Z,
    "dateModified": 2020-11-12T23:54:04.623Z,
    "mdxType": "Meta",
    "package": "6e59e023145bf99af36eacdfc87d4c4e",
    "title": "MDX",
  },
  "exports": Object {
    "default": Object {
      "story": Object {
        "title": undefined,
      },
    },
  },
  "packages": Object {
    "6e59e023145bf99af36eacdfc87d4c4e": Object {
      "dependencies": Object {
        "@babel/generator": "^7.12.5",
        "@babel/parser": "^7.12.5",
        "@babel/traverse": "^7.12.5",
        "@component-controls/core": "^1.41.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.12.6",
        "@component-controls/ts-markdown-docs": "^1.37.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "6e59e023145bf99af36eacdfc87d4c4e",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/tw0-levels-sub-arguments.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.41.1",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "value": "name",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 55,
          "line": 18,
        },
        "start": Object {
          "column": 9,
          "line": 18,
        },
      },
      "mdxType": "Story",
      "name": "story-with-props",
      "source": "({ name, age }) => <Button />",
    },
  },
  "transformed": "import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"MDX\\" component={Button} />

<Story name=\\"story-with-props\\">
  {({ name, age }) => <Button />}
</Story>",
}
`;

exports[`mdx-stories two-arguments.mdx 1`] = `
Object {
  "components": Object {
    "fe664c2ffbbcacffdac896ace94db697": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "name": "Button",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "fe664c2ffbbcacffdac896ace94db697",
    },
    "date": 2020-10-21T01:23:26.441Z,
    "dateModified": 2020-11-12T23:54:08.214Z,
    "mdxType": "Meta",
    "package": "a1ab80046bc96afbd8544a77ddf630e5",
    "title": "MDX",
  },
  "exports": Object {
    "default": Object {
      "story": Object {
        "title": undefined,
      },
    },
  },
  "packages": Object {
    "a1ab80046bc96afbd8544a77ddf630e5": Object {
      "dependencies": Object {
        "@babel/generator": "^7.12.5",
        "@babel/parser": "^7.12.5",
        "@babel/traverse": "^7.12.5",
        "@component-controls/core": "^1.41.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.12.6",
        "@component-controls/ts-markdown-docs": "^1.37.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "a1ab80046bc96afbd8544a77ddf630e5",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/two-arguments.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.41.1",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 6,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": "props",
          "value": "props",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 15,
              "line": 0,
            },
            "start": Object {
              "column": 8,
              "line": 0,
            },
          },
          "name": "context",
          "value": "context",
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 56,
          "line": 18,
        },
        "start": Object {
          "column": 9,
          "line": 18,
        },
      },
      "mdxType": "Story",
      "name": "story-with-props",
      "source": "(props, context) => <Button />",
    },
  },
  "transformed": "import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"MDX\\" component={Button} />

<Story name=\\"story-with-props\\">
  {(props, context) => <Button />}
</Story>",
}
`;

exports[`mdx-stories two-levels-alias.mdx 1`] = `
Object {
  "components": Object {
    "0a73df5cffa26ca62ec534813a77384f": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "name": "Button",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "0a73df5cffa26ca62ec534813a77384f",
    },
    "date": 2020-10-21T01:23:26.441Z,
    "dateModified": 2020-11-12T23:54:11.826Z,
    "mdxType": "Meta",
    "package": "195529eaaf75e7a96c882e2a716448ae",
    "title": "MDX",
  },
  "exports": Object {
    "default": Object {
      "story": Object {
        "title": undefined,
      },
    },
  },
  "packages": Object {
    "195529eaaf75e7a96c882e2a716448ae": Object {
      "dependencies": Object {
        "@babel/generator": "^7.12.5",
        "@babel/parser": "^7.12.5",
        "@babel/traverse": "^7.12.5",
        "@component-controls/core": "^1.41.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.12.6",
        "@component-controls/ts-markdown-docs": "^1.37.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "195529eaaf75e7a96c882e2a716448ae",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/two-levels-alias.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.41.1",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 22,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "value": "MyName",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 0,
                },
                "start": Object {
                  "column": 17,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 63,
          "line": 18,
        },
        "start": Object {
          "column": 9,
          "line": 18,
        },
      },
      "mdxType": "Story",
      "name": "story-with-props",
      "source": "({ name: MyName, age }) => <Button />",
    },
  },
  "transformed": "import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"MDX\\" component={Button} />

<Story name=\\"story-with-props\\">
  {({ name: MyName, age }) => <Button />}
</Story>",
}
`;
